Clean some code Done setup watching gmail Analyzing payload to extract information